src/test/deca/context/valid/created/passe1_1.deca
// Description:
//    test basique sur la passe 1 pour les class
// Resultats:
//    ok

class A {

}

class B extends A {

}

{
    println("ok");
}