src/test/deca/context/invalid/created/SansObjet/read.deca
// Description:
//    test de readInt avec une conversion int -> float
// Resultats:
//    "affiche x"

{   
    int x = readFloat();
    println(x);
}